Добавлены картинки и первый блок

--- a/index.html
+++ b/index.html
@@ -21,7 +21,21 @@
 
 <div class="wrapper">
     <div class="grid">
-        <div class="box box1">One</div>
+        <div class="box box1">
+            <div class="iphone">
+                <div class="block">
+                <p>iPhone</p>
+                <div class="price">
+                    <div class="stroke_price">11 pro от <color>79 000</color> ₽</div>
+                    <div class="stroke_price">11 от <color>55 000</color> ₽</div>
+                    <div class="stroke_price">SE от <color>38 990</color> ₽</div>
+                    <div class="stroke_price">XS от <color>49 000</color> ₽</div>
+                    <div class="stroke_price">XR от <color>49 000</color> ₽</div>
+                </div>
+                </div>
+                <div class="imgphone"></div>
+            </div>
+        </div>
         <div class="box box2">Two</div>
         <div class="box box3">Three</div>
         <div class="box box4">Four</div>
