--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="block">
                 <p>iPhone</p>
                 <div class="price">
-                    <div class="stroke_price">11 pro от <color>79 000</color> ₽</div>
+                    <div class="stroke_price">11 Pro от <color>79 000</color> ₽</div>
                     <div class="stroke_price">11 от <color>55 000</color> ₽</div>
                     <div class="stroke_price">SE от <color>38 990</color> ₽</div>
                     <div class="stroke_price">XS от <color>49 000</color> ₽</div>
