--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>AppleJesus</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fonts.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
