Добавил два раздела и поменял картинки

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <div class="grid">
     <div class="box box1">
-        <div class="iphone">
+        <div class="Iphone">
             <div class="block">
                 <p>iPhone</p>
                 <div class="price">
@@ -34,8 +34,36 @@
             <div class="imgphone"></div>
         </div>
     </div>
-    <div class="box box2">Two</div>
-    <div class="box box3">Three</div>
+    <div class="box box2">
+        <div class="device">
+            <div class="block">
+               <p>iPad</p>
+                <div class="price">
+                     <div class="stroke_price">Pro 12.9 2020 от<color>79 000</color> ₽</div>
+                     <div class="stroke_price">Pro 11 от <color>55 000</color> ₽</div>
+                     <div class="stroke_price">Air от <color>44 000</color> ₽</div>
+                    <div class="stroke_price">Mini от <color>33 500</color> ₽</div>
+                    <div class="stroke_price">2019 7-gen от <color>27 000</color> ₽</div>
+
+            </div>
+        </div>
+            <div class="imgIpad"></div>
+        </div>
+    </div>
+    <div class="box box3">
+        <div class="device">
+        <div class="block">
+                <p>MacBook</p>
+                <div class="price">
+                    <div class="stroke_price">Pro 16 от <color>198 000</color> ₽</div>
+                    <div class="stroke_price">Pro 15 от <color>183 000</color> ₽</div>
+                    <div class="stroke_price">Pro 13 от <color>98 000</color> ₽</div>
+                    <div class="stroke_price">Air от <color>89 000</color> ₽</div>
+                </div>
+            </div>
+            <div class="imgmacbook"></div>
+        </div>
+    </div>
     <div class="box box4">Four</div>
     <div class="box box5">Fivee</div>
 </div>
