Сделал все разделы

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="block">
                <p>iPad</p>
                 <div class="price">
-                     <div class="stroke_price">Pro 12.9 2020 от<color>79 000</color> ₽</div>
+                     <div class="stroke_price">Pro 12.9 2020 от <color>79 000</color> ₽</div>
                      <div class="stroke_price">Pro 11 от <color>55 000</color> ₽</div>
                      <div class="stroke_price">Air от <color>44 000</color> ₽</div>
                     <div class="stroke_price">Mini от <color>33 500</color> ₽</div>
@@ -64,8 +64,33 @@
             <div class="imgmacbook"></div>
         </div>
     </div>
-    <div class="box box4">Four</div>
-    <div class="box box5">Fivee</div>
+    <div class="box box4">
+        <div class="device">
+            <div class="block">
+                <p>Apple iMac</p>
+                <div class="price">
+                    <div class="stroke_price">Pro от <color>425 000</color> ₽</div>
+                    <div class="stroke_price">27-inch от <color>151 000</color> ₽</div>
+                    <div class="stroke_price">21.5-inch от <color>105 000</color> ₽</div>
+                    <div class="stroke_price">Mac Pro от - <color>Под заказ</color></div>
+                    <div class="stroke_price">Mac mini от <color>62 000</color> ₽</div>
+                </div>
+            </div>
+            <div class="imgimac"></div>
+        </div>
+    </div>
+    <div class="box box5">
+        <div class="device">
+            <div class="block">
+                <p>Аксессуары</p>
+                <div class="price">
+                <div class="stroke_price">Ремешки для часов</div>
+                <div class="stroke_price">Чехлы</div>
+            </div>
+            </div>
+            <div class="imgcases"></div>
+        </div>
+    </div>
 </div>
 <div class="wrapper">
 
