Реализовано почти все, что хотелось

--- a/index.html
+++ b/index.html
@@ -24,11 +24,26 @@
             <div class="block">
                 <p>iPhone</p>
                 <div class="price">
-                    <div class="stroke_price">11 Pro от <color>79 000</color> ₽</div>
-                    <div class="stroke_price">11 от <color>55 000</color> ₽</div>
-                    <div class="stroke_price">SE от <color>38 990</color> ₽</div>
-                    <div class="stroke_price">XS от <color>49 000</color> ₽</div>
-                    <div class="stroke_price">XR от <color>49 000</color> ₽</div>
+                    <div class="stroke_price">11 Pro от
+                        <color>79 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">11 от
+                        <color>55 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">SE от
+                        <color>38 990</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">XS от
+                        <color>49 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">XR от
+                        <color>49 000</color>
+                        ₽
+                    </div>
                 </div>
             </div>
             <div class="imgphone"></div>
@@ -37,28 +52,55 @@
     <div class="box box2">
         <div class="device">
             <div class="block">
-               <p>iPad</p>
+                <p>iPad</p>
                 <div class="price">
-                     <div class="stroke_price">Pro 12.9 2020 от <color>79 000</color> ₽</div>
-                     <div class="stroke_price">Pro 11 от <color>55 000</color> ₽</div>
-                     <div class="stroke_price">Air от <color>44 000</color> ₽</div>
-                    <div class="stroke_price">Mini от <color>33 500</color> ₽</div>
-                    <div class="stroke_price">2019 7-gen от <color>27 000</color> ₽</div>
+                    <div class="stroke_price">Pro 12.9 2020 от
+                        <color>79 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">Pro 11 от
+                        <color>55 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">Air от
+                        <color>44 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">Mini от
+                        <color>33 500</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">2019 7-gen от
+                        <color>27 000</color>
+                        ₽
+                    </div>
 
+                </div>
             </div>
-        </div>
             <div class="imgIpad"></div>
         </div>
     </div>
     <div class="box box3">
         <div class="device">
-        <div class="block">
+            <div class="block">
                 <p>MacBook</p>
                 <div class="price">
-                    <div class="stroke_price">Pro 16 от <color>198 000</color> ₽</div>
-                    <div class="stroke_price">Pro 15 от <color>183 000</color> ₽</div>
-                    <div class="stroke_price">Pro 13 от <color>98 000</color> ₽</div>
-                    <div class="stroke_price">Air от <color>89 000</color> ₽</div>
+                    <div class="stroke_price">Pro 16 от
+                        <color>198 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">Pro 15 от
+                        <color>183 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">Pro 13 от
+                        <color>98 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">Air от
+                        <color>89 000</color>
+                        ₽
+                    </div>
                 </div>
             </div>
             <div class="imgmacbook"></div>
@@ -69,11 +111,25 @@
             <div class="block">
                 <p>Apple iMac</p>
                 <div class="price">
-                    <div class="stroke_price">Pro от <color>425 000</color> ₽</div>
-                    <div class="stroke_price">27-inch от <color>151 000</color> ₽</div>
-                    <div class="stroke_price">21.5-inch от <color>105 000</color> ₽</div>
-                    <div class="stroke_price">Mac Pro от - <color>Под заказ</color></div>
-                    <div class="stroke_price">Mac mini от <color>62 000</color> ₽</div>
+                    <div class="stroke_price">Pro от
+                        <color>425 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">27-inch от
+                        <color>151 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">21.5-inch от
+                        <color>105 000</color>
+                        ₽
+                    </div>
+                    <div class="stroke_price">Mac Pro от -
+                        <color>Под заказ</color>
+                    </div>
+                    <div class="stroke_price">Mac mini от
+                        <color>62 000</color>
+                        ₽
+                    </div>
                 </div>
             </div>
             <div class="imgimac"></div>
@@ -82,20 +138,144 @@
     <div class="box box5">
         <div class="device">
             <div class="block">
+                <p>Apple Watch</p>
+                <div class="stroke_price">Series 5 44mm от
+                    <color>34 900</color>
+                    ₽
+                </div>
+                <div class="stroke_price">Series 5 40mm
+                    <color>32 900</color>
+                    ₽
+                </div>
+                <div class="stroke_price">Series 4 44mm от
+                    <color>31 000</color>
+                    ₽
+                </div>
+
+            </div>
+            <div class="imgwatch"></div>
+        </div>
+    </div>
+    <div class="box box6">
+        <div class="device">
+            <div class="block">
+                <p>Музыка</p>
+                <div class="price">
+                    <div class="stroke_price">Air Pods Pro</div>
+                    <div class="stroke_price">Air Pods</div>
+                    <div class="stroke_price">HomePod</div>
+                </div>
+            </div>
+            <div class="music"></div>
+        </div>
+    </div>
+    <div class="box box7">
+        <div class="device">
+            <div class="block">
                 <p>Аксессуары</p>
                 <div class="price">
-                <div class="stroke_price">Ремешки для часов</div>
-                <div class="stroke_price">Чехлы</div>
-            </div>
+                    <div class="stroke_price">Ремешки для часов</div>
+                    <div class="stroke_price">Чехлы</div>
+                </div>
             </div>
             <div class="imgcases"></div>
         </div>
     </div>
 </div>
-<div class="wrapper">
-
-</div>
 <footer>
+    <div class="wrapper">
+        <div class="footer">
+
+            <div class="footertext">
+                А еще у нас есть твиттер, в котором мы раздаем скидки — <a href="http://twitter.com/applejesus"
+                                                                           target="_blank">http://twitter.com/applejesus</a>
+                И страница в "ВКонтакте" — <a href="vk.com/public39915550" target="_blank">vk.com/public39915550</a>!
+                Только тс-с-с!
+                Сайт носит сугубо информационный характер и не является публичной офертой, определяемой Статьей 437 (2)
+                ГК РФ.
+                <br></br>
+                Если вы остались недовольны качеством нашего обслуживания, знаете, как сделать наш магазин лучше или у
+                вас есть
+                предложения по сотрудничеству, то пишите напрямую директору — aj@aj.ru.
+
+
+            </div>
+
+<div class="block">
+            <h3>Связаться с нами</h3>
+
+            <div class="contact">
+
+                <div class="block">
+                    <div class="text">info@aj.ruaj.ru.skype</div>
+                    <div class="cs">
+                        <div class="inst">
+                            <a href="https://www.instagram.com/applejesus/" target="_blank">
+                                <svg width="21px" height="21px" viewBox="0 0 21 21" version="1.1"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <title>Instagramm</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <g id="first-page" stroke="none" stroke-width="1" fill="none"
+                                       fill-rule="evenodd">
+                                        <path d="M14.8344676,20.9262103 C16.5167346,20.8465404 18.0068511,20.462285 19.2345738,19.2298947 C20.4622507,18.002172 20.8465061,16.5120556 20.9308436,14.8297886 C21.0292756,13.0959947 21.0292756,7.9039939 20.9308436,6.17019998 C20.8512194,4.48793298 20.4669641,2.99781655 19.2345738,1.77009386 C18.0068511,0.542416934 16.5167346,0.158161561 14.8344676,0.0738239824 C13.1006737,-0.0246079941 7.90395958,-0.0246079941 6.17016566,0.0738239824 C4.49261205,0.153448175 3.00249561,0.537703548 1.7701053,1.76542623 C0.537714988,2.99314892 0.158127241,4.48326535 0.0737896616,6.16553236 C-0.0245965539,7.89932628 -0.0245965539,13.0959947 0.0737896616,14.8297886 C0.153459616,16.5120556 0.537714988,18.002172 1.7701053,19.2298947 C3.00249561,20.4576174 4.48794442,20.841827 6.17016566,20.9262103 C7.90395958,21.0245966 13.1006737,21.0245966 14.8344676,20.9262103 Z M10.5046505,19.1080331 C8.97705575,19.1080331 5.69223746,19.2298947 4.31455588,18.6862994 C3.39613199,18.3208061 2.68852918,17.613249 2.31836821,16.6901117 C1.7701053,15.3077625 1.89663455,12.0276119 1.89663455,10.5000172 C1.89663455,8.97237668 1.77477292,5.68755839 2.31836821,4.30987681 C2.68386156,3.39145293 3.39141861,2.68385012 4.31455588,2.31368914 C5.69690508,1.76542623 8.97705575,1.89195548 10.5046505,1.89195548 C12.0322909,1.89195548 15.3171092,1.77009386 16.6947908,2.31368914 C17.6132147,2.67918249 18.3208175,3.38673954 18.6909785,4.30987681 C19.2392414,5.69222602 19.1127121,8.97237668 19.1127121,10.5000172 C19.1127121,12.0276119 19.2392414,15.3124302 18.6909785,16.6901117 C18.3254851,17.6085356 17.6179281,18.3161384 16.6947908,18.6862994 C15.3124416,19.2345623 12.0322909,19.1080331 10.5046505,19.1080331 Z M16.1090496,6.15143796 C16.802558,6.15143796 17.3648696,5.5938398 17.3648696,4.895618 C17.3648696,4.20210958 16.802558,3.63979804 16.1090496,3.63979804 C15.4155412,3.63979804 14.8532297,4.20210958 14.8532297,4.895618 C14.8532297,5.58912642 15.4108278,6.15143796 16.1090496,6.15143796 Z M10.5046505,15.8841227 C13.4849291,15.8841227 15.8888018,13.48025 15.8888018,10.5000172 C15.8888018,7.51973853 13.4849291,5.11586584 10.5046505,5.11586584 C7.5244176,5.11586584 5.1205449,7.51973853 5.1205449,10.5000172 C5.1205449,13.48025 7.5244176,15.8841227 10.5046505,15.8841227 Z M10.5046505,14.0003699 C8.57875174,14.0003699 7.00429772,12.4305835 7.00429772,10.5000172 C7.00429772,8.56940505 8.57408411,6.99961866 10.5046505,6.99961866 C12.4352626,6.99961866 14.005049,8.56940505 14.005049,10.5000172 C14.005049,12.4305835 12.430595,14.0003699 10.5046505,14.0003699 Z"
+                                              id="Instagramm" fill="#FFFFFF" fill-rule="nonzero"></path>
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="vk">
+                            <a href="https://vk.com/ajlovesyou" target="_blank">
+                                <svg width="27px" height="18px" viewBox="0 0 36 21" version="1.1"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <title>VK</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <g id="first-page" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <path d="M33.9215881,21 C35.0240753,21 35.5818878,20.4487244 35.2603638,19.359375 C34.525351,17.0690369 29.5575256,12.3571747 29.334375,12.0421875 C28.7634888,11.3071747 28.9275513,10.9790497 29.334375,10.3227997 C29.340976,10.3162628 34.059375,3.675 34.5450256,1.42407532 C34.787851,0.603762817 34.5450256,0 33.3769135,0 L29.5115753,0 C28.5272003,0 28.0744263,0.518463135 27.831601,1.09595032 C27.831601,1.09595032 25.862851,5.89311218 23.0803253,9.00376282 C22.18125,9.90283813 21.7678253,10.1915497 21.2756378,10.1915497 C21.0328125,10.1915497 20.6588013,9.90283813 20.6588013,9.08252563 L20.6588013,1.42407532 C20.6588013,0.439700317 20.3831635,0 19.5693878,0 L13.4925385,0 C12.8756378,0 12.5081635,0.459375 12.5081635,0.8859375 C12.5081635,1.81782532 13.8994263,2.034375 14.04375,4.659375 L14.04375,10.3556122 C14.04375,11.6024872 13.8206635,11.8321747 13.328476,11.8321747 C12.015976,11.8321747 8.8265625,7.01533813 6.93657532,1.50283813 C6.55596313,0.433099365 6.18188782,0 5.19097595,0 L1.32563782,0 C0.223150635,0 0,0.518463135 0,1.09595032 C0,2.11967468 1.3125,7.20561218 6.10972595,13.9256378 C9.30567627,18.5127869 13.8075256,21 17.9025513,21 C20.3634888,21 20.6653381,20.4487244 20.6653381,19.4971619 C20.6653381,15.1134247 20.4421875,14.7 21.6759888,14.7 C22.246875,14.7 23.23125,14.9887756 25.528125,17.2002869 C28.153125,19.8252869 28.5862885,21 30.05625,21 L33.9215881,21 Z"
+                                              id="VK" fill="#FFFFFF" fill-rule="nonzero"></path>
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="twt">
+                            <a href="https://twitter.com/applejesus" target="_blank">
+                                <svg width="26px" height="21px" viewBox="0 0 26 21" version="1.1"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <title>twitter</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <g id="first-page" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <path d="M8.13749568,21 C17.8828722,21 23.214874,12.9280959 23.214874,5.92267101 C23.214874,5.69300192 23.214874,5.46323421 23.1984514,5.23356512 C24.2320363,4.47886768 25.134438,3.54371949 25.8561917,2.4937614 C24.9046703,2.90388124 23.8710855,3.19924052 22.8046555,3.3140504 C23.9038319,2.65783893 24.7405435,1.62425408 25.1343394,0.393746609 C24.1170785,1.00078907 22.9686837,1.44375401 21.7710707,1.67342309 C20.8030281,0.63983824 19.4249642,0 17.8991468,0 C14.9624698,0 12.5999408,2.3789022 12.5999408,5.299206 C12.5999408,5.70937515 12.6491591,6.11949499 12.7311733,6.5132416 C8.33436899,6.2835232 4.41322681,4.18355773 1.80465552,0.967943976 C1.34521872,1.75543719 1.08280318,2.65778961 1.08280318,3.64215614 C1.08280318,5.47965675 2.01790206,7.10386152 3.44523352,8.05543226 C2.57577551,8.0226858 1.75538788,7.77659417 1.04995808,7.38284756 L1.04995808,7.44843912 C1.04995808,10.0242146 2.87108547,12.1569759 5.299206,12.6492085 C4.85629038,12.7640183 4.38048035,12.8296592 3.90471963,12.8296592 C3.56014203,12.8296592 3.2320363,12.7968634 2.90388124,12.7476451 C3.57656458,14.8476599 5.5289244,16.373428 7.85860828,16.4226957 C6.03748089,17.8500271 3.75696602,18.6867387 1.27967648,18.6867387 C0.836711545,18.6867387 0.426591705,18.6703161 0,18.6211471 C2.34610643,20.1304434 5.13512847,21 8.13749568,21 Z"
+                                              id="twitter" fill="#FFFFFF" fill-rule="nonzero"></path>
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="fb">
+                            <a href="https://www.facebook.com/applejesus.ru" target="_blank">
+                                <svg width="21px" height="21px" viewBox="0 0 21 21" version="1.1">
+                                <title>facebook</title>
+                                <desc>Created with Sketch.</desc>
+                                <g id="first-page" stroke="none" stroke-width="1" fill="none"
+                                   fill-rule="evenodd">
+                                    <path d="M8.68359375,21 L8.68359375,13.8604889 L5.73046875,13.8604889 L5.73046875,10.5 L8.68359375,10.5 L8.68359375,7.93876648 C8.68359375,5.02546692 10.4179688,3.41624451 13.0743713,3.41624451 C14.3465424,3.41624451 15.6768951,3.64311218 15.6768951,3.64311218 L15.6768951,6.50248718 L14.2110901,6.50248718 C12.7668915,6.50248718 12.3164062,7.39874268 12.3164062,8.31797791 L12.3164062,10.5 L15.5404816,10.5 L15.0248566,13.8604889 L12.3164062,13.8604889 L12.3164062,21 L18.75,21 C19.9920044,21 21,19.9920044 21,18.75 L21,2.25 C21,1.00799561 19.9920044,0 18.75,0 L2.25,0 C1.00799561,0 0,1.00799561 0,2.25 L0,18.75 C0,19.9920044 1.00799561,21 2.25,21 L8.68359375,21 Z"
+                                          id="facebook" fill="#FFFFFF" fill-rule="nonzero"></path>
+                                </g>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="text">8 (800) 333 59 66</div>
+                    <div class="text">+7 (495) 540 49 00</div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+
+
 </footer>
 </body>
 </html>
